k8s/ollama.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ollama
  name: ollama
spec:
  ports:
    - name: "11434"
      port: 11434
      targetPort: 11434
  selector:
    io.kompose.service: ollama

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: ollama
  name: ollama
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ollama
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/aiac-genai-collama-default: "true"
        io.kompose.service: ollama
    spec:
      containers:
        - image: ollama/ollama:0.1.27
          name: ollama
          ports:
            - containerPort: 11434
              hostPort: 11434
              protocol: TCP
          volumeMounts:
            - mountPath: /root/.ollama
              name: ollama-claim0
      restartPolicy: Always
      volumes:
        - name: ollama-claim0
          persistentVolumeClaim:
            claimName: ollama-claim0
